added more testing

--- a/index.html
+++ b/index.html
@@ -21,10 +21,36 @@
         var assert = chai.assert;
     </script>
 
-    <!-- the function to be tested -->
+    <!-- the function to be tested is greet -->
     <script src="greet.js" charset="utf-8"></script>
     <!-- followed by the tests -->
     <script src="test/greet.tests.js" charset="utf-8"></script>
+
+
+    <!-- the function to be tested is isFromBellville -->
+    <script src="isFromBellville.js" charset="utf-8"></script>
+    <!-- followed by the tests -->
+    <script src="test/isFromBellville.test.js" charset="utf-8"></script>
+
+    <!-- the function to be tested is totalPhoneBill -->
+    <script src="totalPhoneBill.js" charset="utf-8"></script>
+    <!-- followed by the tests -->
+    <script src="test/totalPhoneBill.test.js" charset="utf-8"></script>
+
+    <!-- the function to be tested is isFromCapeTown -->
+    <script src="isFromCapeTown.js" charset="utf-8"></script>
+    <!-- followed by the tests -->
+    <script src="test/isFromCapeTown.test.js" charset="utf-8"></script>
+
+    <!-- the function to be tested is mostPrifitableDepartment -->
+    <script src="mostProfitableDepartment.js" charset="utf-8"></script>
+    <!-- followed by the tests -->
+    <script src="test/mostProfitableDepartment.test.js" charset="utf-8"></script>
+
+
+
+
+
     <script>
         // configure and run mocha
         mocha.checkLeaks();
