--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
     <!-- followed by the tests -->
     <script src="test/mostProfitableDepartment.test.js" charset="utf-8"></script>
 
+    <!-- the function to be tested is findItemsOver20 -->
+    <script src="findItemsOver20.js" charset="utf-8"></script>
+    <!-- followed by the tests -->
+    <script src="test/findItemsOver20.test.js" charset="utf-8"></script>
+
+    <!-- the function to be tested is findItemsOver -->
+    <script src="findItemsOver.js" charset="utf-8"></script>
+    <!-- followed by the tests -->
+    <script src="test/findItemsOver.test.js" charset="utf-8"></script>
+
+
 
 
 
